--- a/eufonix/code/index.html
+++ b/eufonix/code/index.html
@@ -5,14 +5,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eufonix</title>
-    <meta name="description" content="Eufonix portal de juegos y experiencas interactivas">
+    <meta name="description" content="Eufonix portal de juegos y experiencias interactivas">
     <meta name="keywords"
         content="Eufonix, euforia, experiencias, juegos, impacto, creatividad, portal de juegos, estética, interactividad">
     <meta name="author" content="Sergio Delgado López">
     <link rel="canonical" href="eufonix/code/index.html">
+
+    <link rel="stylesheet" href="main.css" type="text/css">
+
+    <script src="main.js"></script>
 </head>
 
 <body>
+
+    <!-- Intro -->
+    <div id="intro" onclick="showAfterIntro()">
+        <h1>EUFONIX</h1>
+        <h2>¡Haz clic para entrar!</h2>
+    </div>
+
+    <!-- AfterIntro -->
+    <div id="afterIntro">
+        <div class="afterIntro-cont">
+            <!-- Header -->
+            <div class="header-cont">
+                <header>
+                    <ul>
+                        <li>aa</li>
+                    </ul>
+                </header>
+            </div>
+
+            <!-- Main -->
+            <div>
+                <main class="main-cont">
+                    <section class="experience">
+                        <p>Sand Game</p>
+                    </section>
+                    <section>
+                        <div></div>
+                    </section>
+                </main>
+            </div>
+
+            <!-- Footer -->
+            <div class="footer-cont">
+                <footer>
+                    <ul>
+                        <li>asd</li>
+                    </ul>
+                </footer>
+            </div>
+        </div>
+    </div>
 
 </body>
 
